Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.

2007-sept-04 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ pcbnew
	better comments in editrack-part2 (the todo remark solved) 
+ todo.txt: note about editrack-part2 modified (problem solved)


2007-Aug-31 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew & gerbview
  * Added TRACK::Copy() which can copy a SEGVIA or a TRACK.
  * Changed export_to_pcbnew.cpp so it created a SEGVIA properly, a significant change.
    Moved and changed a big block of code in export_to_pcbnew.cpp so we can
    properly construct the SEGVIA().  Not tested.
  * Make EDA_BaseStruct::m_StructType private so we can trap where it is being
    changed.  (It should never be changed after construction, see comment above
    EDA_BaseStruct::SetType().)


2007-Aug-30 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
  * Removed SEGVIA::IsViaOnLayer, and instead implemented an override to 
    virtual BOARD_ITEM::IsOnLayer() called SEGVIA::IsOnLayer().
  * Tweaked TRACK::Visit() to not traverse the KICAD_T scan list and a 
    corresponding change to BOARD::Vist() so we can now get VIA priority 
    if desired.  (Have to traverse m_Tracks twice, wonder if we could use
    two lists: m_Tracks and a new m_Vias?)
  * Changed signature of MODULE::Display_Infos( WinEDA_DrawFrame* frame ) so
    it gets called virtually with any BOARD_ITEM* which is actually a MODULE*.
    This was a bug.
  * With virtual functions, it is now critical that the correct object type
    be instantiated.  This was not happening in ioascii.cpp when reading 
    the vias.  Bug fixed.
  * GENERAL_COLLECTOR getting closer to useable.