@@ -4,14 +4,8 @@ folks will see these items and volunteer to do them.
 
 
 
-*** Look at @todo in editrack-part2.cpp.  Is this is a bug?  ** Done (JP Charras)  **
-Concerns:
-a) Isn't there a problem with losing the memory of the original?
-b) If this is supposed to duplicate a SEGVIA to, then this call should be changed
-   to the new TRACK::Copy(), i.e. g_CurrentTrackSegment->Copy() 
->> (JP Charras:) No problem. the code is correct.
-	I have put comments to explain this code section and modified some line for a more intelligible code
-
+*** Add hierarchical menu to right mouse click in PCBNEW for the case when
+multiple items are under the mouse cursor.
 
    
 *** Set up a DOXYGEN environment starting with a configuration file that:
